--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "devDependencies": {
     "css-loader": "^3.4.2",
+    "csv-loader": "^3.0.2",
     "file-loader": "^5.1.0",
-    "style-loader": "^1.1.3"
+    "style-loader": "^1.1.3",
+    "xml-loader": "^1.2.1"
   }
 }
