--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
     "csv-loader": "^3.0.2",
     "file-loader": "^5.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.1.3",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
     "xml-loader": "^1.2.1"
   }
 }
